<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.acb.angela.umusic.ui.PlaylistsActivity">

    <ImageView
        android:id="@+id/main_background_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:src="@drawable/main_bg"
        android:contentDescription="@string/main_background_image" />

    <android.support.v7.widget.CardView
        android:id="@+id/albums_card_view"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_album_black_24dp"
            android:drawablePadding="8dp"
            android:text="@string/category_albums"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/black" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/songs_card_view"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/albums_card_view"
        app:cardUseCompatPadding="true"
        app:contentPadding="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_allmusic_black_24dp"
            android:drawablePadding="8dp"
            android:text="@string/category_tracks"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/black" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/playlists_card_view"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/songs_card_view"
        app:cardUseCompatPadding="true"
        app:contentPadding="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_playlist_music_black_24dp"
            android:drawablePadding="8dp"
            android:text="@string/category_playlists"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/black" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/favourites_card_view"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/playlists_card_view"
        app:cardUseCompatPadding="true"
        app:contentPadding="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_favorite_black_24dp"
            android:drawablePadding="8dp"
            android:text="@string/category_favourites"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/black" />
    </android.support.v7.widget.CardView>

</RelativeLayout>
