<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/details_cover"
        tools:ignore="ContentDescription"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/details_bg_gradient" >

        <TextView
            android:id="@+id/details_song_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/details_song_artist"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            tools:text="Imagine"/>

        <TextView
            android:id="@+id/details_song_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/details_playback_controls"
            android:layout_marginBottom="@dimen/details_song_artist_margin_bottom"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            tools:text="John Lennon"/>


        <LinearLayout
            android:id="@+id/details_playback_controls"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/details_playback_controls_height">

                <TextView
                    android:id="@+id/duration_start"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/details_text_view_margin_start"
                    android:layout_alignParentStart="true"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:text="@string/duration_start"/>

                <SeekBar
                    android:id="@+id/seek_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/details_seekbar_margin"
                    android:layout_marginRight="@dimen/details_seekbar_margin"
                    android:layout_toStartOf="@+id/duration_end"
                    android:layout_toEndOf="@+id/duration_start" />

                <TextView
                    android:id="@+id/duration_end"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/details_text_view_margin_end"
                    android:layout_alignParentEnd="true"
                    android:gravity="center_vertical"
                    android:layout_alignWithParentIfMissing="true"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:text="@string/duration_end"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/details_playback_controls_height">

                <ImageView
                    android:id="@+id/skip_previous"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_skip_previous_white_48dp"
                    android:contentDescription="@string/skip_prev_content_desc" />

                <ImageView
                    android:id="@+id/play_pause"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:src="@drawable/ic_play_arrow_white_48dp"
                    android:contentDescription="@string/play_pause_content_desc" />

                <ImageView
                    android:id="@+id/skip_next"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_skip_next_white_48dp"
                    android:contentDescription="@string/skip_next_content_desc" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
